--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ django-markdown-deux==1.0.5
 django-oauth-toolkit==1.2.0
 django-pagedown==1.0.6
 django-rest-auth==0.9.5
+django-rest-framework==0.1.0
 django-webpack-loader==0.6.0
-djangorestframework==3.10.1
+djangorestframework==3.12.1
 djangorestframework-jwt==1.11.0
 google-auth==1.6.3
 idna==2.8
